--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ body{
     background-color: white;
     font-family: Satoshi, sans-serif;
     color: #363737;
+    size: 8px;
 }
 *{
   font-family: 'Satoshi', sans-serif;
